Fixed page size on small screens

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -64,7 +64,6 @@ a {
 }
 
 .webProfilePhoto {
-  width: 30rem;
   margin-right: 6rem;
 }
 
